# sending-email

./: README.md
.github/workflows/: python-app.yml
sending/: .coverage  pyproject.toml  teste.py
sending-email/: .coverage  pyproject.toml  requirements.txt
sending-email/spam/: __init__.py  sending_email.py
sending-email/tests/: test_sample.py  test_send_email.py
sending-email/tests/test_sending_email/: test_sending_email.py
sending/spam/: __init__.py  db.py  main.py  models.py  sending_email.py
sending/tests/: conftest.py  send_users_base.py  test_send_email.py  test_user.py
